Animes page fixed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karan Dev</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
     <nav>
@@ -37,7 +37,7 @@
           <div class="social-links">
             <a href="${homeData.socialLinks.github}" target="_blank"><i class="fab fa-github"></i></a>
             <a href="${homeData.socialLinks.linkedin}" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="${homeData.socialLinks.twitter}" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="${homeData.socialLinks.x}" target="_blank"><i class="fab fa-x-twitter"></i></a>
           </div>
         </div>
         <img src="${homeData.profileImage}" alt="${homeData.name}" class="profile-pic">
